*Empty MediaWiki Message*

--- a/GPS_applications.mw
+++ b/GPS_applications.mw
@@ -50,3 +50,4 @@ mapping program. Downloads maps on demand and caches them, very efficient. '''Wo
 * I want the GPS to update profile settings based on my location. Example, mute the phone ringer when I am at work.
 * I want to log GPS data for later analysis. [[GPS Data Logger]]
 * I want to collect GPS data for scientific field work (forestry, biology, etc)
+[[Category:Applications]]
