--- a/Openmoko_Community_Applications.mw
+++ b/Openmoko_Community_Applications.mw
@@ -24,11 +24,9 @@ Any problems with the software below should be reported to the individual softwa
 
 :[http://www.ginguppin.de/files/minimo.tar.bz2 http://www.ginguppin.de/files/minimo.tar.bz2]
 
-:Compatible:
+:Compatible Hardware:
 
 |}
-
-
 
 === Bluetooth ===
 {| class="wikitable" cellspacing="2" cellpadding="2" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #c0c0c0; background:#eeeeee; width:80%;floating="center"; "
