/* Pages proposed for deletion */

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -63,6 +63,8 @@ Accepted and implemented requests should be deleted. Rejected requests should be
 |[[special]] || not translated, seems to be information about e-mail confirmation || [[User:Marko Knöbl|Marko Knöbl]]
 |-
 |[[Flashing in windows/it]] || English page has already been deleted || [[User:Marko Knöbl|Marko Knöbl]]
+|-
+|[[Application]] || outdated || [[User:Marko Knöbl|Marko Knöbl]]
 |}
 
 ==Categories ==
