--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -30,6 +30,12 @@ Accepted and implemented requests should be deleted. Rejected requests should be
 **[[Editing wiki]]
 **[[Edit Wiki]]
 
+*pages about GPS:
+**[[Hardware:AGPS]]
+**[[Gpsd]]
+**[[Neo 1973 GPS]]
+**[[Neo FreeRunner GPS]]
+
 ===Tidy up===
 * [[Wishlist:Text Input]] - tidy up/sort, give short feedback to each method
 * [[Booting_from_SD]] - tidy up and a rewrite
