--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -36,6 +36,10 @@ Accepted and implemented requests should be deleted. Rejected requests should be
 **[[Neo 1973 GPS]]
 **[[Neo FreeRunner GPS]]
 
+*applications:
+**[[Available Packages]]
+**[[Applications]]
+
 ===Tidy up===
 * [[Wishlist:Text Input]] - tidy up/sort, give short feedback to each method
 * [[Booting_from_SD]] - tidy up and a rewrite
