--- a/Openmoko_Community_Applications.mw
+++ b/Openmoko_Community_Applications.mw
@@ -49,6 +49,9 @@ Any problems with the software below should be reported to the individual softwa
 === GPS ===
 {{main|GPS applications}}
 
+
+[[Image:Omview thumbs.png]]
+
 === Other ===
 '''[[Gestures]]<br>
 Gestures is a daemon that interpret measurements from the accelerometers and the movements you make with your FreeRunner. It also switches between portrait and landscape if it notices that your FreeRunner has been rotated.
