--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -811,7 +811,7 @@ ordering rules:
 ==== participiants ====
 # <s>Ferenc 'Lion' Veres [http://wiki.openmoko.org/wiki/Special:Emailuser/kempelen Contact] lion kukac netngine pont hu</s> ordered
 # <s>Laszlo 'rka' Szabo [http://wiki.openmoko.org/wiki/Special:Emailuser/rka Contact]</s>
-# tg [http://wiki.openmoko.org/wiki/Special:Emailuser/tg?wpSubject=Openmoko%20GroupSales Contact]
+# <s>tg [http://wiki.openmoko.org/wiki/Special:Emailuser/tg?wpSubject=Openmoko%20GroupSales Contact]</s>
 # Árva T. Mihály - lirul [KUKAC] hixsplit [PONT] hu (Suspended, I've removed myself from order lists transitionally [080804].)
 # Nyosigomboc - nyos [KUKAC] nyos [PONT] homelinux [PONT] net
 # Ludvig Adam - hunludvig [KUKAC] gmail [PONT] com
@@ -863,14 +863,6 @@ You will be contacted before ordering.
 ! prefer 2y warranty? (yes/?)
 ! want devboard? (yes/yes?/no)
 |-
-| tg
-| tg x-net hu
-| yes
-| yes?
-| yes
-| yes?
-| yes
-|-
 | KREKÁCS László
 | laszlo.krekacs.list kukac gmail potty com
 | yes
@@ -911,22 +903,6 @@ You will be contacted before ordering.
 | yes
 | yes?
 | yes
-|-
-| Besenyei Tamas (btamas)
-| tamas besenyei net
-| yes
-| ?
-| yes
-| ?
-| no
-|-
-| Ruskó Péter
-| peter kukac rusko pont hu
-| yes
-| yes?
-| yes
-| ?
-| no
 |-
 | Roósz Péter
 | peter kukac roosz pont hu
