--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -816,11 +816,11 @@ ordering rules:
 # Nyosigomboc - nyos [KUKAC] nyos [PONT] homelinux [PONT] net
 # Ludvig Adam - hunludvig [KUKAC] gmail [PONT] com
 # [http://wiki.openmoko.org/wiki/Special:Emailuser/asdmin?wpSubject=Openmoko%20GroupSales Dániel 'asd' Vásárhelyi]
-# btamas, [http://wiki.openmoko.org/wiki/Special:Emailuser/btamas Contact]
+# <s>btamas, [http://wiki.openmoko.org/wiki/Special:Emailuser/btamas Contact]</s>
 # Kovács 'ka87' András, andras [kukac] csevego [pont] net
 # pcm, pcm [kukac] freemail [pont] hu
 # Áron Preisinger, appa00 [kukac] gmail [pont] com [http://wiki.openmoko.org/wiki/Special:Emailuser/appa Contact]
-# pierre286, [http://wiki.openmoko.org/wiki/Special:Emailuser/pierre286 Contact]
+# <s>pierre286, [http://wiki.openmoko.org/wiki/Special:Emailuser/pierre286 Contact]</s>
 # Hélei Zoltán, heleiz [kukac] gmail
 # Radics Áron, raron @ vipmail . hu
 # Laszlo Szomor [http://wiki.openmoko.org/wiki/Special:Emailuser/Lci Contact]
