--- a/Openmoko_Community_Applications.mw
+++ b/Openmoko_Community_Applications.mw
@@ -53,8 +53,22 @@ Any problems with the software below should be reported to the individual softwa
 [[Image:Omview thumbs.png]]
 
 === Other ===
-'''[[Gestures]]<br>
-Gestures is a daemon that interpret measurements from the accelerometers and the movements you make with your FreeRunner. It also switches between portrait and landscape if it notices that your FreeRunner has been rotated.
+
+{| class="wikitable" cellspacing="2" cellpadding="2" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #c0c0c0; background:#eeeeee; width:80%;floating="center"; "
+! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:15% " |
+[[Image:Remoko menu.jpg|150px|center]]
+! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:85% " align=left|
+
+:'''[[Gestures]]<br>
+:Gestures is a daemon that interpret measurements from the accelerometers and the movements you make with your FreeRunner. It also switches between portrait and landscape if it notices that your FreeRunner has been rotated.
+
+:Download here:
+:[http://code.google.com/p/remoko/downloads/list ReMoko Packages]
+
+:Compatible Hardware:
+
+|}
+
 
 '''[[Mokopedia]]'''<br>
 Special compressed version of Wikipedia stored in your SD storage card.   Access to Wikipedia wherever you are!
