--- a/Openmoko_Community_Applications.mw
+++ b/Openmoko_Community_Applications.mw
@@ -32,7 +32,7 @@ Any problems with the software below should be reported to the individual softwa
 {| class="wikitable" cellspacing="2" cellpadding="2" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #c0c0c0; background:#eeeeee; width:80%;floating="center"; "
 ! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:15% " |
 [[Image:Remoko menu.jpg|150px|center]]
-! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:85% " align=left|
+! style="background:#ffffcc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:85% " align=left|
 :'''[[ReMoko]]'''<br>
 
 :This applications connects through Bluetooth and turns your FreeRunner into a remote control for presentations, a multimedia (or media player) remote control, a mouse for another computer and much more.
@@ -43,8 +43,6 @@ Any problems with the software below should be reported to the individual softwa
 :Compatible Hardware:
 
 |}
-
-
 
 === GPS ===
 {{main|GPS applications}}
