--- a/Openmoko_Community_Applications.mw
+++ b/Openmoko_Community_Applications.mw
@@ -60,7 +60,7 @@ Any problems with the software below should be reported to the individual softwa
 :Download here:
 :[http://accelges.googlecode.com/files/accelges_0.1.0-svnr204-r2_armv4t.ipk Gestures]
 
-:Compatible Hardware:
+:Distribution:
 
 |}
 
