--- a/Openmoko_Community_Applications.mw
+++ b/Openmoko_Community_Applications.mw
@@ -64,9 +64,22 @@ Any problems with the software below should be reported to the individual softwa
 
 |}
 
+{| class="wikitable" cellspacing="2" cellpadding="2" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #c0c0c0; background:#eeeeee; width:80%;floating="center"; "
+! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:15% " |
+[[Image:Mokopedia main.png|150px|center]]
+! style="background:#ffffcc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:85% " align=left|
 
-'''[[Mokopedia]]'''<br>
-Special compressed version of Wikipedia stored in your SD storage card.   Access to Wikipedia wherever you are!
+:'''[[Mokopedia]]'''<br>
+:Special compressed version of Wikipedia stored in your SD storage card.   Access to Wikipedia wherever you are!
+
+:Download here:
+:[http://accelges.googlecode.com/files/accelges_0.1.0-svnr204-r2_armv4t.ipk Gestures]
+
+:Distribution:
+
+|}
+
+
 
 '''[[Openmoko Mail]]'''<br>
 An e-mail client for the [[Om2007.2]] distribution.
