--- a/Openmoko_Community_Applications.mw
+++ b/Openmoko_Community_Applications.mw
@@ -72,10 +72,7 @@ Any problems with the software below should be reported to the individual softwa
 :'''[[Mokopedia]]'''<br>
 :Special compressed version of Wikipedia stored in your SD storage card.   Access to Wikipedia wherever you are!
 
-:Download here:
-:[http://accelges.googlecode.com/files/accelges_0.1.0-svnr204-r2_armv4t.ipk Gestures]
-
-:Distribution:
+:Distribution:2007.2
 
 |}
 
