--- a/Applications.mw
+++ b/Applications.mw
@@ -48,7 +48,7 @@ see [[Openmoko Community Applications]]
 * Consider adding a Trash or Deleted Items area that has everything the user has deleted. The user’s data is the most important priority. Let’s make it hard for them to lose anything and easy to recover it.
 
 * Reduce at the minimum the need for unused space: borders, intra-widgets distance.
-
+{{app}}
 [[Category:Applications| ]]
 [[Category:Openmoko]]
 [[Category:Guides]]
