--- a/Openmoko_Community_Applications.mw
+++ b/Openmoko_Community_Applications.mw
@@ -1,7 +1,7 @@
 {{Applications}}
 
 == Overview ==
-This page is intended for end-users of Openmoko smartphones.   It lists some of the cool applications provided by the Openmoko community that you can install and enjoy.   Freedom to share!    You can find many more applications here - http://projects.openmoko.org 
+This page is intended for end-users of Openmoko smartphones.   It showcase remarkable applications developed by the Openmoko community. Freedom to share! You can find many more applications here - http://projects.openmoko.org 
 
 '''Please note that not all of these applications are in a finished format yet.   When they are complete you will be able to download them via a menu on the phone.    At the moment, following a recipe of commands in the console window may be needed to install.   This will of course improve with time :-) '''
 
