--- a/Qtopia_on_FreeRunner%2Fit.mw
+++ b/Qtopia_on_FreeRunner%2Fit.mw
@@ -117,7 +117,7 @@ Qtopia should now boot.
 
 This will clean up the file system and clear recovery flags in ext3 that ext2 does not support, then try booting from the MicroSD again.
 
-=== Internationalization ===
+== Internationalization ==
 
 Qtopia comes with support for German and American English, and users from other countries will find that Qtopia's predictive keyboard makes writing in another language near impossible. One way to disable the predictive keyboard is to simply replace /opt/Qtopia/etc/dict/en_US/common.dawg and words.dawg with empty files (after backing them up). Qtopia normally looks in these files for words to suggest, and if it doesn't find any words that fit, it simply shows what you actually wrote.
 
