/* Booting into Qtopia */

--- a/Qtopia_%2F_Qt_Extended_on_FreeRunner.mw
+++ b/Qtopia_%2F_Qt_Extended_on_FreeRunner.mw
@@ -105,7 +105,7 @@ This will take some time (couple hours). Note that the option "-device ficgta01"
 
 will make a root directory into build directory. That directory should be copied to /opt/Qtopia of your phone with scp. once done restart qpe or whole phone.
 
-=== Booting into Qtopia ===
+== Booting into Qtopia ==
 
 Now shutdown the FreeRunner
 
