/* Option 3: updating from source */

--- a/Qtopia_%2F_Qt_Extended_on_FreeRunner.mw
+++ b/Qtopia_%2F_Qt_Extended_on_FreeRunner.mw
@@ -81,7 +81,7 @@ From your Linux box, rename <tt>uImage-2.6.24+git18+9c058ff0d2641df3c36fc3300acb
   scp uImage.bin root@192.168.0.202:/media/card/boot/
   scp uImage.bin root@192.168.0.202:/media/card/
 
-=== Option 3: updating from source ===
+== Option 3: updating from source ==
 
 {{note|This will upgrade only opt/Qtopia directory, you should use opkg update/upgrade for the rest}}
 Original Qtopia images (the distribution released by Trolltech, not ASU) are rarely released as a rootfs image, but the source code is often updated. If you want to reflash your OM with the latest version of Qtopia you might build it from sources. This has been explained in [http://lists.openmoko.org/pipermail/community/2008-August/024785.html this thread] of the community mailing list. Summing up:
