--- a/GTA02_revisions.mw
+++ b/GTA02_revisions.mw
@@ -6,7 +6,7 @@ All Neo Freerunners that have been released to the public at this time are [[#GT
 
 The GTA02 will be a [[GTA01]] but with a major revision of everything. These components were added:
 * Wifi: Atheros 802.11 b/g
-* CPU: Samsung S3C2442 B54 SoC @ 400Mhz
+* CPU: [[Samsung S3C2442B B54]] SoC @ 400Mhz
 * SMedia Glamo3362 Graphics Accelerator
 * 2x ST 3D Accelerometers
 * 256MB Flash
@@ -19,7 +19,7 @@ The GTA02 will be a [[GTA01]] but with a major revision of everything. These com
 * GSM/GPRS: 850/1800/1900 Mhz or 900/1800/1900 Mhz
 * USB Host function with power
 And it lost:
-* One speaker, becoming mono. 
+* One speaker, becoming mono.
 
 == Estimated time line ==
 {{Todo|It should be nice if their are some dates next to the milestones}}
