*Empty MediaWiki Message*

--- a/GTA02_revisions.mw
+++ b/GTA02_revisions.mw
@@ -1,4 +1,4 @@
-This page will give you an overview of all the revisions of the GTA02 hardware, both pre-release and planned future revisions. The internal codename of the [[Neo FreeRunner]] was GTA02.
+This page will give you an overview of all the revisions of the GTA02 hardware, both pre-release and planned future revisions. The internal codename of the [[Neo FreeRunner]] was GTA02. There are talks about a future [[GTA03]].
 
 All Neo Freerunners that have been released to the public at this time are [[#GTA02v6|revision 6]]. There are a few persons with r5, but they were manually adapted to the state of r6. 
 
