--- a/GTA03.mw
+++ b/GTA03.mw
@@ -11,7 +11,7 @@ New:
 * New GSM chip (2.75/EDGE)
 * Different Battery
 * Camera
-* Based on the same SoC 
+* Based on the same [[Samsung S3C2442B B54]] SoC 
 * GPS: u-blox ANTARIS 5 instead of ANTARIS 4
 Removed:
 * the (compromised) Glamo chip
