/* Prerequisites */  opkg install

--- a/Gestures.mw
+++ b/Gestures.mw
@@ -38,7 +38,8 @@ Select a gesture, press Train, and follow instructions.
 * You can use any distribution you like; I would suggest using the [[Om 2008.8]] for now. You'll need these dependencies:
  dbus, dbus-glib, libxrandr, libnotify, notification-daemon, libcurl, and gtk+
 * On the [[Om 2008.8]], you'll be missing:
- libnotify, notification-daemon, libsexy2, libwnck-1-18, libstartup-notification-1-0, and libglade-2
+libnotify, notification-daemon, libsexy2, libwnck-1-18, libstartup-notification-1-0, and libglade-2
+ opkg install libnotify notification-daemon libsexy2 libwnck-1-18 libstartup-notification-1-0 libglade-2.0-0
 ''Remark: On the 2008.8, your missing dependencies will be downloaded automatically by the installer.''
 
 ===Preparing Om 2008.8 for Gestures===
