*Empty MediaWiki Message*

--- a/Om_2008_Locations.mw
+++ b/Om_2008_Locations.mw
@@ -1,4 +1,4 @@
-{{Languages|Om 2008.8}}
+{{Languages|Om 2008.8 Locations}}
 {{Om 2008.8}}
 == Introduction ==
 '''Locations''' (codenamed ''Splinter'') is a location sharing application based on GPS and SMS.  It
