--- a/Biking.mw
+++ b/Biking.mw
@@ -32,7 +32,7 @@ Linear regulator above might be replaced with [http://www.dimensionengineering.c
 
 == Software for biking ==
 
-* [[TangoGPS]]
+* [[TangoGPS]], + [http://blogs.thehumanjourney.net/finds/entry/20080826 OSM Cycle data]
 * [[Navit]]
 * [[Installing Pyroute|Pyroute]]
 * [http://wiki.openstreetmap.org/index.php/Rana Rana]
