/* Download and installation */

--- a/OMView.mw
+++ b/OMView.mw
@@ -6,7 +6,7 @@ OMView is a simple image viewer for the openmoko platform. It supports mouse/tou
 
 == Download and installation ==
 The most recent package will be [http://projects.openmoko.org/frs/?group_id=182 here]. Just Install the ipk.
-Then place the edj at "/usr/share/ewl/themes/e17.edj". It is a modified ewl theme ([http://exchange.enlightenment.org/theme/show/234 original]) with larger font.
+Then place the edj at "/usr/share/ewl/themes/e17.edj". It is a modified ewl theme ([http://exchange.enlightenment.org/theme/show/234 original]) with larger font, trying look similiar to the standard 2008.8 illume theme.
 
 == Usage ==
 
