--- a/Openmoko_Community_Applications.mw
+++ b/Openmoko_Community_Applications.mw
@@ -84,8 +84,22 @@ An e-mail client for the [[Om2007.2]] distribution.
 '''[[Orrery]]'''<br>
 Orrery displays the objects in the night (or day) sky.  It uses the GPS position, if available.
 
-'''[[OMView]]'''<br>
-Fast and simple image viewer with thumbnail view.
+{| class="wikitable" cellspacing="2" cellpadding="2" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #c0c0c0; background:#eeeeee; width:80%;floating="center"; "
+! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:15% " |
+[[Image:omview_thumbs.png|150px|center]]
+! style="background:#ffffcc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:1px solid #222222; width:85% " align=left|
+
+:'''[[OMView]]'''<br>
+:Fast and simple image viewer.
+
+
+
+:Download here:
+:[http://projects.openmoko.org/frs/?group_id=182 OMView packages]
+
+|}
+
+
 
 === System Software ===
 This is software that mostly has no GUI. This software is usually used by other programs.
