--- a/GTA02_revisions.mw
+++ b/GTA02_revisions.mw
@@ -1,8 +1,8 @@
-This page will give you an overview of all the revisions of the GTA02 hardware, both pre-release and planned future revisions. The internal codename of the [[Neo FreeRunner]] was GTA02. There are talks about a future [[GTA03]].
+This page summarizes the revisions of the GTA02 hardware, both pre-release and planned future revisions.
 
-All Neo Freerunners that have been released to the public at this time are [[#GTA02v6|revision 6]]. There are a few persons with r5, but they were manually adapted to the state of r6. 
+The internal codename of the [[Neo FreeRunner]] was GTA02. [[Neo_1973_vs_Neo_FreeRunner|Compared]] to the previous [[GTA01]], it has the same physical dimensions, screen and RAM, but more flash storage, a faster processor, plus wifi and accelerometers. The next major revision is expected to be [[GTA03]].
 
-
+All Neo Freerunners that have been released to the public at this time are [[#GTA02v6|revision 6]]. There are a few persons with r5, but they were manually adapted to the state of r6.
 
 == Estimated time line ==
 {{Todo|It should be nice if their are some dates next to the milestones}}
