--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -17,13 +17,12 @@ The Openmoko stack, which includes a full X server, allows users and developers 
 </tr>
 <tr valign="top" style="background:#333333">
 <td>
+* 26/8; Openmoko [http://lists.openmoko.org/pipermail/community/2008-August/027997.html announces] 2008.8 update.
 * 15/8: Debian on the FreeRunner [http://n2.nabble.com/Debian-on-the-FreeRunner----now-official-td726410.html announced], [http://wiki.debian.org/DebianOnFreeRunner instructions].
 * 8/8: Openmoko team [http://lists.openmoko.org/pipermail/community/2008-August/025602.html releases] distribution formerly called ASU as [[Om 2008.8]] .
 * 4-5/8: Openmoko is at Linuxworld, San Francisco. [http://www.youtube.com/watch?v=jWJjNF36DfI Video].
 * 30/7: The FSO distribution releases [http://downloads.openmoko.org/framework/milestone2/ milestone 2] 
 * 25/7: Community helps, [[GPS Problems]] fixed
-* 20/7: [[Debian]] added to the [[Distributions]] page
-* 27/6: GTA 02 shipping in the  [http://lists.openmoko.org/pipermail/community/2008-June/019943.html material world]
 </td>
 <td>
 ===<font color=white>About Openmoko</font>===
