--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -17,7 +17,7 @@ The Openmoko stack, which includes a full X server, allows users and developers 
 </tr>
 <tr valign="top" style="background:#333333">
 <td>
-* 26/8; Openmoko [http://lists.openmoko.org/pipermail/community/2008-August/027997.html announces] 2008.8 update.
+* 26/8; Openmoko [http://lists.openmoko.org/pipermail/community/2008-August/027997.html updates] Om 2008.8 distribution.
 * 15/8: Debian on the FreeRunner [http://n2.nabble.com/Debian-on-the-FreeRunner----now-official-td726410.html announced], [http://wiki.debian.org/DebianOnFreeRunner instructions].
 * 8/8: Openmoko team [http://lists.openmoko.org/pipermail/community/2008-August/025602.html releases] distribution formerly called ASU as [[Om 2008.8]] .
 * 4-5/8: Openmoko is at Linuxworld, San Francisco. [http://www.youtube.com/watch?v=jWJjNF36DfI Video].
