--- a/Openmoko_Local_Groups:_Finland.mw
+++ b/Openmoko_Local_Groups:_Finland.mw
@@ -1,17 +1,14 @@
-See [[Talk:Openmoko Local Groups: Finland|discussion]]
+Finnish main page: [[Main_Page/fi|suomenkielinen pääsivu]].
 
-IRC channel: '''''#openmoko-fi''''' @ [http://freenode.net/ Freenode]
+Finnish translators: [[Translation#Finnish|Openmoko-ohjelmien suomentaminen]]
 
-== Suomenkieliset sivut ==
+IRC channel: '''''#openmoko-fi''''' @ [http://freenode.net/ Freenode] (ca. 30 people)
 
-* [[Main_Page/fi|Suomenkielinen pääsivu]].
-
-== Subgroups ==
+==== Subgroups ====
 * [[Openmoko Local Groups: Helsinki|Helsinki]]
 * [[Openmoko Local Groups: Your city/area|Your city/area]]
 
-== See also ==
-* [[Translation#Finnish|Finnish translators]]
-* [[GroupSales#Finland|Group Purchases of Neo Freerunner devices in Finland]] (group purchases mostly done, but still it would be possible to buy 10-packs from pulster.de for 299€/phone)
+==== See also ====
+* [[GroupSales#Finland|Group Purchases of Neo Freerunner devices in Finland]]<br><sup>group purchases mostly done, but still it would be possible to buy 10-packs from pulster.de for 299€/phone</sup>
 
 [[Category:Openmoko Local Groups]]
