--- a/Openmoko_Local_Groups:_Finland.mw
+++ b/Openmoko_Local_Groups:_Finland.mw
@@ -2,7 +2,7 @@ Finnish main page: [[Main_Page/fi|suomenkielinen pääsivu]].
 
 Finnish translators: [[Translation#Finnish|Openmoko-ohjelmien suomentaminen]]
 
-IRC channel: '''''#openmoko-fi''''' @ [http://freenode.net/ Freenode] (ca. 30 people)
+IRC channel: '''''#openmoko-fi''''' @ irc.freenode.net <sup>([http://java.freenode.net/index.php?channel=openmoko-fi Java-IRC] & [http://embed.mibbit.com/?server=irc.freenode.net&channel=%23openmoko-fi&noServerNotices=true&noServerMotd=true&forcePrompt=true Ajax-IRC])</sup><br>
 
 ==== Subgroups ====
 * [[Openmoko Local Groups: Helsinki|Helsinki]]
