--- a/Openmoko_Local_Groups:_Madrid.mw
+++ b/Openmoko_Local_Groups:_Madrid.mw
@@ -40,6 +40,14 @@ Una lista de las gentes que formamos parte de la comunidad de Openmoko en Madrid
 | Todavia no.
 |-
 |}
+|[[User:Ieepa2|Ieepa2]]
+| empezando a programar,hardware
+| desearia ver andar el ver movil libre, a pleno rendimiento, compitiendo a los sistemas 
+| propietarios
+| Gipuzkoa
+| Tengo ya el GTA02
+| No
+|-
 
 == Pedido Free Runner en Grupo ==
 
