/* Meet other editors of Openmoko wiki */

--- a/Edit_Wiki.mw
+++ b/Edit_Wiki.mw
@@ -12,8 +12,8 @@ If you create a new wiki page, you can reference the [[Openmoko Wiki Categories 
 ==Where to help==
 You can see [[Wiki Maintenance Agenda]] and [[Wiki Issues]]. You can also help by [[Translation|translating]] this wiki to other languages.
 
-==Meet other editors of Openmoko wiki==
-You can join [https://lists.openmoko.org/mailman/listinfo/documentation documentation mailing list] to interact with other wiki editors. Visit [[Wiki Maintainers]] to learn about the wiki maintainers.
+==Coordinate with other editors of Openmoko wiki==
+If you are interested in helping improve our wiki, please join the [https://lists.openmoko.org/mailman/listinfo/documentation documentation mailing list] to coordinate ideas and work with other wiki editors. Visit [[Wiki Maintainers]] to learn about the wiki maintainers, a team of community volunteers who have committed to working with the Openmoko team to improve the wiki in particular and all documentation in general.
 
 == Editor's tools ==
 
