--- a/FAQ.mw
+++ b/FAQ.mw
@@ -320,9 +320,9 @@ The Charger/USB device plug only has +5V and 0V connected in the simple cable, w
 
 For a more complex cable, when the host socket is not plugged in, the cable acts as a simple USB cable.
 
-==== Q: What are the details of the USB port on the [[Neo1973]]? How does it compare to USB On-The-Go? ====
+==== Q: What are the details of the USB port on the Neo? How does it compare to USB On-The-Go? ====
 
-A: The [[Neo1973]] will have mini-USB-B, and will be able to function as either a host or a device. It will NOT be USB On-The-Go.  OTG is a complex specification, and it comprises way more than just
+A: The Neo will have mini-USB-B, and will be able to function as either a host or a device. It will NOT be USB On-The-Go.  OTG is a complex specification, and it comprises way more than just
 an AB socket, but also electrical and software components which cannot be provide by the S3C2410.
 
 You will need a special Mini-B to regular-B cable (note that this won't actually comply with the USB standard:  a compliant cable has to have an A or Mini-A plug on one end, and B or Mini-B on the other).
