/* Pages that specially need Tender Loving Care */

--- a/Edit_Wiki.mw
+++ b/Edit_Wiki.mw
@@ -21,7 +21,7 @@ If you are interested in helping improve our wiki, please join the [https://list
 * [[Special:Categories]] - List of existing categories
 * [[Special:Specialpages]] - List and find various content
 
-== Pages that specially need Tender Loving Care ==
+== Pages that especially need work ==
 
 * [[:Category:Candidates for speedy deletion]]
 * [[Special:Lonelypages]] - Orphaned pages
