/* If you add a new page */

--- a/Edit_Wiki.mw
+++ b/Edit_Wiki.mw
@@ -7,7 +7,7 @@ If you are a beginner to editing wikis, please read following pages to get an id
 * [[Wiki Issues]]
 
 ==If you add a new page==
-If you create a new wiki page, you can reference the [[Openmoko Wiki Categories Index Page|Openmoko Wiki Categories Index Page]] to put your page on the right category.
+If you create a new wiki page, please visit [[Openmoko Wiki Categories Index Page|Openmoko Wiki Categories Index Page]] to see the available categories and please put your page on the right category. This will make it easier for wiki users to find your page.
 
 ==Where to help==
 You can see [[Wiki Maintenance Agenda]] and [[Wiki Issues]]. You can also help by [[Translation|translating]] this wiki to other languages.
