--- a/Carriers%2FATT.mw
+++ b/Carriers%2FATT.mw
@@ -67,7 +67,7 @@ for AT+COPS
 |-
 | 71234 || G || 3022 || blazing 3G fireball ||  $15 ($30 with $15 instant rebates) GoPhone kit at RadioShack.  Pulled the sim out of the kit phone when I got home, stuck it in my Freerunner, and it worked.  SMS doesn't seem to be working though (nothing shows up in the messages app).
 |-
-| 71234 || O || 4022 || blazing 3G fireball || WalMart/RadioShack $18 Cingular Go phone package. This chip was also given with a contract plan. (Three confirmed working.)[17 July 08 confirmed 4th working w/Family 500 anytime]  
+| 71234 || O || 4022 || blazing 3G fireball || WalMart/RadioShack $18 Cingular Go phone package. This chip was also given with a contract plan. (Three confirmed working.)[17 July 08 confirmed 4th working w/Family 500 anytime]
 |-
 | 71234 || O || 4022 || blazing 3G fireball || Two more confirmed working with FreeRunner.  Previous 4021 chip did not work properly.
 |-
@@ -91,6 +91,8 @@ For info on the 71234 4021 see http://www.oberthurcs.com/getpage.aspx?id=65#appl
 I had a non-compatible SIM card, but it took only a few minutes in an AT&T Store to have them bring up my account, give me a new card, and double check that it works. They generally seem friendly, and it's pretty easy. Just say "Hi, I have an unlocked phone, and my current SIM card doesn't work. Is there any way that I can get another one?"
 
 Note: AT&T claims they cannot reactivate a previously deactivated SIM card. The CSR may give you the choice to force the activation at the risk of losing the current phone number! A word of warning.
+
+Also Note: AT&T stores said no longer carry anything but the "newer" 3G Fireball SIM cards. It is also a good idea to chek the pin placement. If the pins are not centered on the chip there is a good chance that it will not work. 
 
 Question: Suppose you have a SIM card listed on the does NOT work chart.  How can one buy one of the SIM cards that does work?
 
