--- a/Carriers%2FATT.mw
+++ b/Carriers%2FATT.mw
@@ -92,7 +92,7 @@ I had a non-compatible SIM card, but it took only a few minutes in an AT&T Store
 
 Note: AT&T claims they cannot reactivate a previously deactivated SIM card. The CSR may give you the choice to force the activation at the risk of losing the current phone number! A word of warning.
 
-Also Note: AT&T stores said no longer carry anything but the "newer" 3G Fireball SIM cards. It is also a good idea to chek the pin placement. If the pins are not centered on the chip there is a good chance that it will not work. 
+Also Note: AT&T stores said no longer carry anything but the "newer" 3G Fireball SIM cards. It is also a good idea to chek the pin placement. If the pins are not centered on the chip there is a good chance that it will not work. The following link has a number of picture references for working and non-working 3G SIMs [http://bugzilla.openmoko.org/cgi-bin/bugzilla/show_bug.cgi?id=666 Ticket #666 (new defect)]
 
 Question: Suppose you have a SIM card listed on the does NOT work chart.  How can one buy one of the SIM cards that does work?
 
