*Empty MediaWiki Message*

--- a/Apm.mw
+++ b/Apm.mw
@@ -1,5 +1,6 @@
 A Useful app in the terminal to get the state of the battery.
 
+==Options==
 Supported options are:
 
  -V To display the current Version of apm.
@@ -9,6 +10,7 @@ Supported options are:
  -s Suspend the phone.
  -d get a detailed View.
 
+==Examples==
 An example run with a almost full battery:
 
  root@om-gta02:~# apm
