*Empty MediaWiki Message*

--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -260,6 +260,7 @@ Status : 6/10
 * [[User:Freyes]] Felipe Reyes., mailto: felipereyes "remove this and add AT" gmail "dot" com
 * [[User:crsepulv]] Cristian Sepúlveda, mailto: sepulveda.cristian@gmail.com
 * [[User:SurrealWombat]] Simon Martin, mailto: smartin dot cl at gmail dot com
+* [[User:joteiro]] Juan Pizarro, mailto: jpizarrom dot cl at gmail dot com
 
 === Valdivia ===
 * [[User:alvherre]] Álvaro Herrera, mailto: alvherre@alvh.no-ip.org  (I'm OK with joining the guys in Santiago)
