/* Installation */ Updating links for stable release

--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -50,8 +50,8 @@ For more details, see the [[Om 2008.8 Guide]] and the [[Om2008.8 Feature Plan|Om
 
 = Installation =
 
-To install the Om2008.8 distribution on the Neo FreeRunner:
-* As explained in the [[Downloads#Openmoko_2008.8_images_.28ASU.29|Downloads]] page, download the Root Filesystem ([http://downloads.openmoko.org/releases/Om2008.8/Om2008.8-gta02-20080808.rootfs.jffs2 Om2008.8-gta02-20080808.rootfs.jffs2], 68M) and the Kernel ([http://downloads.openmoko.org/releases/Om2008.8/Om2008.8-gta02-20080808.uImage.bin Om2008.8-gta02-20080808.uImage.bin], 1.8M) image files.
+To install the Om2008.8 "stable" distribution on the Neo FreeRunner:
+* As explained in the [[Downloads#Openmoko_2008.8_images_.28ASU.29|Downloads]] page, download the Root Filesystem ([http://downloads.openmoko.org/releases/Om2008.8-update/20080826-asu-stable-rootfs.jffs2 20080826-asu-stable-rootfs.jffs2], 68M) and the Kernel ([http://downloads.openmoko.org/releases/Om2008.8-update/20080826-asu-stable-uImage.bin 20080826-asu-stable-uImage.bin], 1.8M) image files (links as of 2008/08/26 for the updated "stable" release of 2008.8, see [http://lists.openmoko.org/pipermail/community/2008-August/027997.html announcement]).
 * Download and install the [[dfu-util]] software for your architecture.
 * It's backup time !
 * Using dfu-util, [[Flashing the Neo FreeRunner|flash]] the two images in the appropriate partitions of the Neo FreeRunner. Alternatively, you may test the distribution by installing it on the microSD card and [[Booting from SD | boot from microSD card]].
