/* Aggiornare il DNS */

--- a/Manuals%2FNeo_FreeRunner%2Fit.mw
+++ b/Manuals%2FNeo_FreeRunner%2Fit.mw
@@ -305,7 +305,7 @@ Nell'immagine caricata di fabbrica OM2007.2, digita quanto segue per riavviare l
 
  /etc/rc0.d/K40networking restart
 
-Se continuo a non essere in grado di andare su internet con il tuo Neo Freerunner, e stai usando Mandriva e/o hai la tua LAN su 192.168.0.0/24, [[User:Linuxpaul|questa pagina]] dovrebbe aiutarti.
+Se continui a non essere in grado di andare su internet con il tuo Neo Freerunner, e stai usando Mandriva e/o hai la tua LAN su 192.168.0.0/24, [[User:Linuxpaul|questa pagina]] dovrebbe aiutarti.
 
 ==L'Architettura==
 
