/* Future updates */ Adding more details about official stable updates

--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -117,11 +117,11 @@ and add <tt>usb*</tt> above <tt>eth*</tt> in <tt>/etc/resolvconf/interface-order
 
 = Future updates =
 
-{{note|As of August 20th, there are *NO* updates available for 2008.8 anywhere on buildhost.openmoko.org - the daily-feeds directory is incompatible with 2008.8 and will corrupt your software configuration if you use it.}}
+Posterior to the Om2008.8 release made on 2008/08/08, development of ASU/Om2008.8 is switching to a Debian-like model with three branches: stable,  testing and unstable ([http://lists.openmoko.org/pipermail/community/2008-August/026491.html see this message] for more details).
 
-Posterior to the Om2008.8 release, in August 2008 development is switching to a Debian-like model with three branches: stable,  testing and unstable. To minimize chaos, breakage and confusion, official updates for 2008.8 will be made available only when the move is complete ([http://lists.openmoko.org/pipermail/community/2008-August/026491.html see this message] for more details.)
-
-In the meantime, you may try at your own risk [[Download#Unofficial_builds_by_zecke]], [http://download.enlightenment.org/misc/ Raster's builds] or some of the other [[Users Repositories]].
+Official updates for the "stable" branch are now available (as of 2008/08/26) in two forms (see [http://lists.openmoko.org/pipermail/community/2008-August/027997.html see this message] for the announcement) :
+* in the http://downloads.openmoko.org/repository/Om2008.8/ opkg feeds (which should already be configured for opkg updates in 2008.8),
+* as flash-able images in http://downloads.openmoko.org/releases/Om2008.8-update/
 
 = Dedication =
 
