--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -115,7 +115,7 @@ and add <tt>usb*</tt> above <tt>eth*</tt> in <tt>/etc/resolvconf/interface-order
 * The installer app doesn't release administrative rights which results in not being able to use opkg. Solution: run "killall packagekitd" (on the freerunner or when ssh'ed in).
 * The installer app doesn't release administrative rights which results in not being able to use opkg. Alternate Solution: On the FreeRunner, use the drop-down menu to close all open applications.
 
-= Future updates =
+= Official updates for "stable" Om 2008.8 =
 
 Posterior to the Om2008.8 release made on 2008/08/08, development of ASU/Om2008.8 is switching to a Debian-like model with three branches: stable,  testing and unstable ([http://lists.openmoko.org/pipermail/community/2008-August/026491.html see this message] for more details).
 
